// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing for component <GifExpertApp /> should list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="lord of the rings"
      key="0"
    />
    <GifGrid
      category="the hobbit"
      key="1"
    />
  </ol>
</Fragment>
`;

exports[`Testing for component <GifExpertApp /> should render 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
